--- a/src/containers/TopBar/styles.scss
+++ b/src/containers/TopBar/styles.scss
@@ -3,15 +3,12 @@
 .topBar {
   background-color: $white;
   box-shadow: 0 1px 4px rgba(#001529, 0.8);
-  padding: 0 1.6rem;
-  height: 4.8rem;
 
   .top-right-wrapper {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    height: 4.8rem;
 
     .user-info {
       display: flex;
@@ -74,7 +71,7 @@
 }
 
 .language__container {
-  margin-right: 3rem;
+  margin-right: 1.5rem;
 
   .ant-select {
     width: 11rem;
@@ -96,14 +93,13 @@
   align-items: center;
 
   :not(:first-child) {
-    margin-left: 3rem;
+    margin-left: 1.5rem;
   }
 
   a {
     line-height: 1.4rem;
     font-size: 1.4rem;
     font-weight: 600;
-    color: $white;
   }
 }
 
